# feature-transcribe-ai

./: .gitignore  LICENSE  README.md  app.py  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  script.js  sync.sh  ts-to-ast.js
feature_transcribe/: code_parser.py  diff_utils.py  feature_to_code.py  openai_api.py  prepare_code.py  start_new_conversation.py  utils.py
src/: code_parser.py  feature_to_code.py  prepare_code.py  utils.py
templates/: index.html
